created and adapted recommended block

--- a/index.html
+++ b/index.html
@@ -32,6 +32,44 @@
             <img src="img/main/bg.jpg" alt="Background" />
           </div>
         </section>
+
+        <section class="page__recommended recommended">
+          <div class="recommended__container">
+            <h2 class="recommended__title">Recommended</h2>
+            <div class="recommended__items">
+              <div class="recommended__item item-recommended">
+                <div class="item-recommended__image">
+                  <a href="#"><img src="img/recommended/01.svg" alt="" /></a>
+                </div>
+                <div class="item-recommended__title">
+                  <a href="#">Bose portable Smart speaker</a>
+                </div>
+                <div class="item-recommended__subtitle">Smart home</div>
+                <div class="item-recommended__price">$ 399.00</div>
+              </div>
+              <div class="recommended__item item-recommended">
+                <div class="item-recommended__image">
+                  <a href="#"><img src="img/recommended/02.svg" alt="" /></a>
+                </div>
+                <div class="item-recommended__title">
+                  <a href="#">SoundLink Flex Bluetooth speaker</a>
+                </div>
+                <div class="item-recommended__subtitle">Portable bluetooth</div>
+                <div class="item-recommended__price">$ 149.00</div>
+              </div>
+              <div class="recommended__item item-recommended">
+                <div class="item-recommended__image">
+                  <a href="#"><img src="img/recommended/03.svg" alt="" /></a>
+                </div>
+                <div class="item-recommended__title">
+                  <a href="#">SoundLink Color Bluetooth speaker II</a>
+                </div>
+                <div class="item-recommended__subtitle">Portable bluetooth</div>
+                <div class="item-recommended__price">$ 129.00</div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
