created and adapted products block

--- a/index.html
+++ b/index.html
@@ -70,8 +70,54 @@
             </div>
           </div>
         </section>
+
+        <section class="page__products products">
+          <div class="products__container">
+            <div class="products__body">
+              <h2 class="products__title">Browse Bose products by category</h2>
+            </div>
+            <div class="products__item">
+              <div class="products__row">
+                <div class="products__image_1">
+                  <img src="img/products/01.jpg" alt="" />
+                </div>
+                <div class="products__image_2">
+                  <img src="img/products/02.jpg" alt="" />
+                </div>
+              </div>
+              <div class="products__text">
+                <a href="#">Headphones & earbuds</a>
+              </div>
+            </div>
+            <div class="products__item">
+              <div class="products__row">
+                <div class="products__image_1">
+                  <img src="img/products/03.jpg" alt="" />
+                </div>
+                <div class="products__image_2">
+                  <img src="img/products/04.jpg" alt="" />
+                </div>
+              </div>
+              <div class="products__text">
+                <a href="#">Speakers</a>
+              </div>
+            </div>
+            <div class="products__item">
+              <div class="products__row">
+                <div class="products__image_3">
+                  <img src="img/products/05.jpg" alt="" />
+                </div>
+                <div class="products__image_4">
+                  <img src="img/products/06.jpg" alt="" />
+                </div>
+              </div>
+              <div class="products__text">
+                <a href="#">Audio sunglasses</a>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
-      <footer class="footer"></footer>
     </div>
   </body>
 </html>
