created and adapted why block

--- a/index.html
+++ b/index.html
@@ -117,6 +117,26 @@
             </div>
           </div>
         </section>
+
+        <section class="page__why why">
+          <div class="why__container">
+            <h2 class="why__title">Why buy direct from Bose</h2>
+            <div class="why__body">
+              <div class="why__top">
+                <p>Free 2-day shipping and returns</p>
+                <p>90-day risk-free trial</p>
+                <p>World class customer service</p>
+                <p>My Bose account management</p>
+              </div>
+              <div class="why__text">
+                A great product is more than what’s in the box. It’s a promise
+                of premium performance, world-class support, and everything you
+                expect from a trusted brand. It’s just one of many reasons why
+                you’ll shop with confidence on Bose.com.
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
