added fullscreen bottom block

--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
             </div>
           </div>
         </section>
+
+        <div class="page__fullscreen-image fullscreen-image">
+          <div class="fullscreen-image__bg _ibg">
+            <img src="img/fullscreen-image/01.jpg" alt="" />
+          </div>
+        </div>
       </main>
     </div>
   </body>
